# SAPA-public

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.json  pyproject.toml
.github/workflows/: ci.yml
sapa/: __init__.py  app.py  config.py  db.py  email.py  gaps.py  hermes.py  plugin.py  profiles.py  search.py  shell.py  watcher.py  websocket.py
sapa/plugins/calendar/: plugin.py  routes.py
sapa/plugins/calendar/static/: calendar.css  calendar.js  nav.html  panels.html
sapa/plugins/health/: api_client.py  content.py  equipment.py  gap_prompts.py  gap_targets.py  guru.py  plugin.py  prompts.py  routes.py  tracker.py
sapa/plugins/health/migrations/: 001_initial.sql  002_recipe_features.sql  003_protocols.sql  004_reminders.sql
sapa/plugins/health/static/: health-recipes.js  health.css  health.js  modals.html  nav.html  panels.html
sapa/plugins/hermes/: plugin.py  routes.py  tracker.py
sapa/plugins/hermes/migrations/: 001_initial.sql
sapa/plugins/hermes/static/: hermes.css  hermes.js  nav.html  panels.html
sapa/plugins/homestead/: content.py  gap_prompts.py  gap_targets.py  plugin.py  routes.py  tracker.py
sapa/plugins/homestead/demo_inbox/: homestead-getting-started.md
sapa/plugins/homestead/migrations/: 001_initial.sql  002_topics.sql
sapa/static/: base.css  base.js  gap-base.js  gap-modal.html  gap-template.js  gap.css  shell.html  sw.js
scripts/: backup.sh  feed.sh  install.sh  retry-pending.sh
templates/: sapa.service
tests/: conftest.py  test_js_assembly.py  test_recipes_api.py  test_smoke.py
(+24 files in other folders)
