[project]
name = "sapa"
version = "0.1.0"
description = "Set Apart Personal Assistant - Family dashboard framework"
# readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "watchdog>=4.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "aiofiles>=24.0.0",
    "python-multipart>=0.0.9",
    "icalendar>=5.0.0",
    "recurring-ical-events>=2.0.0",
]

[project.scripts]
sapa = "sapa.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sapa"]
